--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   },
   "homepage": "http://getsaleor.com/",
   "engines": {
-    "node": ">=10.6.0",
-    "npm": ">=6.1.0"
+    "node": "10.6.0",
+    "npm": "6.1.0"
   },
   "dependencies": {
     "@material-ui/core": "^3.6.1",
