--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "type": "git",
     "url": "git://github.com/mirumee/saleor.git"
   },
-  "author": "Mirumee Software",
+  "author": "BRINGALL S.A de C.V",
   "license": "BSD-3-Clause",
   "bugs": {
     "url": "https://github.com/mirumee/saleor/issues"
