--- a/common.env
+++ b/common.env
@@ -6,3 +6,14 @@ CELERY_BROKER_URL=redis://redis:6379/1
 SECRET_KEY=changeme
 JWT_VERIFY_EXPIRATION=True
 VATLAYER_ACCESS_KEY
+AWS_ACCESS_KEY_ID=AKIAJXHK4HDBAZROW5PQ
+AWS_SECRET_ACCESS_KEY=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
+AWS_MEDIA_BUCKET_NAME=bringall
+AWS_STORAGE_BUCKET_NAME=bringall
+AWS_STATIC_CUSTOM_DOMAIN=bringall.s3.amazonaws.com
+
+OPENPAY_PRODUCTION_MODE=True
+OPENPAY_MERCHANT_ID=mfhswhpjhxu2apbcwzjc
+OPENPAY_API_KEY=sk_3c0397c1e8dd435f898b0175c339b146
+DASHBOARD_PATH=https://sandbox-dashboard.openpay.mx
+
