--- a/tests/gateway/stripe/cassettes/test_authorize_without_capture.yaml
+++ b/tests/gateway/stripe/cassettes/test_authorize_without_capture.yaml
@@ -1,6 +1,6 @@
 interactions:
 - request:
-    body: payment_method=pm_card_pl&amount=4242&currency=usd&confirmation_method=manual&confirm=True&capture_method=manual
+    body: payment_method=pm_card_pl&amount=4242&currency=MXN&confirmation_method=manual&confirm=True&capture_method=manual
     headers:
       Accept:
       - '*/*'
@@ -43,7 +43,7 @@ interactions:
         \            \"state\": null\n          },\n          \"email\": null,\n \
         \         \"name\": null,\n          \"phone\": null\n        },\n       \
         \ \"captured\": false,\n        \"created\": 1565271719,\n        \"currency\"\
-        : \"usd\",\n        \"customer\": null,\n        \"description\": null,\n\
+        : \"MXN\",\n        \"customer\": null,\n        \"description\": null,\n\
         \        \"destination\": null,\n        \"dispute\": null,\n        \"failure_code\"\
         : null,\n        \"failure_message\": null,\n        \"fraud_details\": {\n\
         \        },\n        \"invoice\": null,\n        \"livemode\": false,\n  \
@@ -75,7 +75,7 @@ interactions:
         \    \"url\": \"/v1/charges?payment_intent=pi_1F5BsRIUmJaD6Oqvz2XMKZCD\"\n\
         \  },\n  \"client_secret\": \"pi_1F5BsRIUmJaD6Oqvz2XMKZCD_secret_FnZ8ApzrD4JVONWgCbLGbKAdI\"\
         ,\n  \"confirmation_method\": \"manual\",\n  \"created\": 1565271719,\n  \"\
-        currency\": \"usd\",\n  \"customer\": null,\n  \"description\": null,\n  \"\
+        currency\": \"MXN\",\n  \"customer\": null,\n  \"description\": null,\n  \"\
         invoice\": null,\n  \"last_payment_error\": null,\n  \"livemode\": false,\n\
         \  \"metadata\": {\n  },\n  \"next_action\": null,\n  \"on_behalf_of\": null,\n\
         \  \"payment_method\": \"pm_1F5BsQIUmJaD6OqvbB4aOcJX\",\n  \"payment_method_options\"\
