--- a/tests/extensions/plugins/cassettes/test_calculate_checkout_line_total[False-30.00-36.90-False].yaml
+++ b/tests/extensions/plugins/cassettes/test_calculate_checkout_line_total[False-30.00-36.90-False].yaml
@@ -7,7 +7,7 @@ interactions:
       "4371 Lucas Knoll Apt. 791", "line2": "", "city": "BENNETTMOUTH", "region":
       "", "country": "US", "postalCode": "92614"}, "shipTo": {"line1": "T\u0119czowa
       7", "line2": "", "city": "WROC\u0141AW", "region": "", "country": "PL", "postalCode":
-      "53-601"}}, "commit": false, "currencyCode": "USD", "email": ""}}'
+      "53-601"}}, "commit": false, "currencyCode": "MXN", "email": ""}}'
     headers:
       Accept:
       - '*/*'
@@ -27,7 +27,7 @@ interactions:
     body:
       string: "{\"id\":0,\"code\":\"dbc7516f-2e0f-4df1-ab44-bc5283dd6ef7\",\"companyId\"\
         :242975,\"date\":\"2019-06-26\",\"paymentDate\":\"2019-06-26\",\"status\"\
-        :\"Temporary\",\"type\":\"SalesOrder\",\"currencyCode\":\"USD\",\"customerVendorCode\"\
+        :\"Temporary\",\"type\":\"SalesOrder\",\"currencyCode\":\"MXN\",\"customerVendorCode\"\
         :\"0\",\"customerCode\":\"0\",\"reconciled\":false,\"totalAmount\":30.0,\"\
         totalExempt\":0.0,\"totalDiscount\":0.0,\"totalTax\":6.9,\"totalTaxable\"\
         :30.0,\"totalTaxCalculated\":6.9,\"adjustmentReason\":\"NotAdjusted\",\"locked\"\
