--- a/tests/extensions/plugins/cassettes/test_calculate_checkout_line_total[True-12.20-15.00-True].yaml
+++ b/tests/extensions/plugins/cassettes/test_calculate_checkout_line_total[True-12.20-15.00-True].yaml
@@ -7,7 +7,7 @@ interactions:
       "4371 Lucas Knoll Apt. 791", "line2": "", "city": "BENNETTMOUTH", "region":
       "", "country": "US", "postalCode": "92614"}, "shipTo": {"line1": "T\u0119czowa
       7", "line2": "", "city": "WROC\u0141AW", "region": "", "country": "PL", "postalCode":
-      "53-601"}}, "commit": false, "currencyCode": "USD", "email": ""}}'
+      "53-601"}}, "commit": false, "currencyCode": "MXN", "email": ""}}'
     headers:
       Accept:
       - '*/*'
@@ -27,7 +27,7 @@ interactions:
     body:
       string: "{\"id\":0,\"code\":\"65c9e962-3141-4515-a2ab-06af88918bd6\",\"companyId\"\
         :242975,\"date\":\"2019-06-26\",\"paymentDate\":\"2019-06-26\",\"status\"\
-        :\"Temporary\",\"type\":\"SalesOrder\",\"currencyCode\":\"USD\",\"customerVendorCode\"\
+        :\"Temporary\",\"type\":\"SalesOrder\",\"currencyCode\":\"MXN\",\"customerVendorCode\"\
         :\"0\",\"customerCode\":\"0\",\"reconciled\":false,\"totalAmount\":12.2,\"\
         totalExempt\":0.0,\"totalDiscount\":0.0,\"totalTax\":2.8,\"totalTaxable\"\
         :12.2,\"totalTaxCalculated\":2.8,\"adjustmentReason\":\"NotAdjusted\",\"locked\"\
