--- a/tests/extensions/plugins/cassettes/test_calculate_checkout_line_total[True-15.00-18.45-False].yaml
+++ b/tests/extensions/plugins/cassettes/test_calculate_checkout_line_total[True-15.00-18.45-False].yaml
@@ -7,7 +7,7 @@ interactions:
       "4371 Lucas Knoll Apt. 791", "line2": "", "city": "BENNETTMOUTH", "region":
       "", "country": "US", "postalCode": "92614"}, "shipTo": {"line1": "T\u0119czowa
       7", "line2": "", "city": "WROC\u0141AW", "region": "", "country": "PL", "postalCode":
-      "53-601"}}, "commit": false, "currencyCode": "USD", "email": ""}}'
+      "53-601"}}, "commit": false, "currencyCode": "MXN", "email": ""}}'
     headers:
       Accept:
       - '*/*'
@@ -27,7 +27,7 @@ interactions:
     body:
       string: "{\"id\":0,\"code\":\"fed24153-887c-4470-a139-db35f86b0e5c\",\"companyId\"\
         :242975,\"date\":\"2019-06-26\",\"paymentDate\":\"2019-06-26\",\"status\"\
-        :\"Temporary\",\"type\":\"SalesOrder\",\"currencyCode\":\"USD\",\"customerVendorCode\"\
+        :\"Temporary\",\"type\":\"SalesOrder\",\"currencyCode\":\"MXN\",\"customerVendorCode\"\
         :\"0\",\"customerCode\":\"0\",\"reconciled\":false,\"totalAmount\":15.0,\"\
         totalExempt\":0.0,\"totalDiscount\":0.0,\"totalTax\":3.45,\"totalTaxable\"\
         :15.0,\"totalTaxCalculated\":3.45,\"adjustmentReason\":\"NotAdjusted\",\"\
