--- a/tests/extensions/plugins/cassettes/test_calculate_checkout_subtotal[False-40.65-50.00-True].yaml
+++ b/tests/extensions/plugins/cassettes/test_calculate_checkout_subtotal[False-40.65-50.00-True].yaml
@@ -10,7 +10,7 @@ interactions:
       "2000 Main Street", "line2": "", "city": "Irvine", "region": "CA", "country":
       "US", "postalCode": "92614"}, "shipTo": {"line1": "T\u0119czowa 7", "line2":
       "", "city": "WROC\u0141AW", "region": "", "country": "PL", "postalCode": "53-601"}},
-      "commit": false, "currencyCode": "USD", "email": ""}}'
+      "commit": false, "currencyCode": "MXN", "email": ""}}'
     headers:
       Accept:
       - '*/*'
@@ -30,7 +30,7 @@ interactions:
     body:
       string: "{\"id\":0,\"code\":\"686cd90a-f807-459d-b473-cdf00143076b\",\"companyId\"\
         :242975,\"date\":\"2019-06-26\",\"paymentDate\":\"2019-06-26\",\"status\"\
-        :\"Temporary\",\"type\":\"SalesOrder\",\"currencyCode\":\"USD\",\"customerVendorCode\"\
+        :\"Temporary\",\"type\":\"SalesOrder\",\"currencyCode\":\"MXN\",\"customerVendorCode\"\
         :\"0\",\"customerCode\":\"0\",\"reconciled\":false,\"totalAmount\":48.78,\"\
         totalExempt\":0.0,\"totalDiscount\":0.0,\"totalTax\":11.22,\"totalTaxable\"\
         :48.78,\"totalTaxCalculated\":11.22,\"adjustmentReason\":\"NotAdjusted\",\"\
