--- a/tests/extensions/plugins/cassettes/test_calculate_checkout_subtotal[False-50.00-61.50-False].yaml
+++ b/tests/extensions/plugins/cassettes/test_calculate_checkout_subtotal[False-50.00-61.50-False].yaml
@@ -10,7 +10,7 @@ interactions:
       "2000 Main Street", "line2": "", "city": "Irvine", "region": "CA", "country":
       "US", "postalCode": "92614"}, "shipTo": {"line1": "T\u0119czowa 7", "line2":
       "", "city": "WROC\u0141AW", "region": "", "country": "PL", "postalCode": "53-601"}},
-      "commit": false, "currencyCode": "USD", "email": ""}}'
+      "commit": false, "currencyCode": "MXN", "email": ""}}'
     headers:
       Accept:
       - '*/*'
@@ -30,7 +30,7 @@ interactions:
     body:
       string: "{\"id\":0,\"code\":\"014993b5-40a5-411e-a623-9a073e208dfc\",\"companyId\"\
         :242975,\"date\":\"2019-06-26\",\"paymentDate\":\"2019-06-26\",\"status\"\
-        :\"Temporary\",\"type\":\"SalesOrder\",\"currencyCode\":\"USD\",\"customerVendorCode\"\
+        :\"Temporary\",\"type\":\"SalesOrder\",\"currencyCode\":\"MXN\",\"customerVendorCode\"\
         :\"0\",\"customerCode\":\"0\",\"reconciled\":false,\"totalAmount\":60.0,\"\
         totalExempt\":0.0,\"totalDiscount\":0.0,\"totalTax\":13.8,\"totalTaxable\"\
         :60.0,\"totalTaxCalculated\":13.8,\"adjustmentReason\":\"NotAdjusted\",\"\
