--- a/tests/extensions/plugins/cassettes/test_calculate_checkout_total[False-29.52-37.00-3.0-True].yaml
+++ b/tests/extensions/plugins/cassettes/test_calculate_checkout_total[False-29.52-37.00-3.0-True].yaml
@@ -9,7 +9,7 @@ interactions:
       "", "city": "Irvine", "region": "CA", "country": "US", "postalCode": "92614"},
       "shipTo": {"line1": "T\u0119czowa 7", "line2": "", "city": "WROC\u0141AW", "region":
       "", "country": "PL", "postalCode": "53-601"}}, "commit": false, "currencyCode":
-      "USD", "email": ""}}'
+      "MXN", "email": ""}}'
     headers:
       Accept:
       - '*/*'
@@ -29,7 +29,7 @@ interactions:
     body:
       string: "{\"id\":0,\"code\":\"8c1f745b-dd3f-4169-baaf-30c8cac73f10\",\"companyId\"\
         :242975,\"date\":\"2019-06-26\",\"paymentDate\":\"2019-06-26\",\"status\"\
-        :\"Temporary\",\"type\":\"SalesOrder\",\"currencyCode\":\"USD\",\"customerVendorCode\"\
+        :\"Temporary\",\"type\":\"SalesOrder\",\"currencyCode\":\"MXN\",\"customerVendorCode\"\
         :\"0\",\"customerCode\":\"0\",\"reconciled\":false,\"totalAmount\":32.52,\"\
         totalExempt\":0.0,\"totalDiscount\":0.0,\"totalTax\":7.48,\"totalTaxable\"\
         :32.52,\"totalTaxCalculated\":7.48,\"adjustmentReason\":\"NotAdjusted\",\"\
