--- a/tests/extensions/plugins/cassettes/test_calculate_checkout_total[False-40.00-49.20-0.0-False].yaml
+++ b/tests/extensions/plugins/cassettes/test_calculate_checkout_total[False-40.00-49.20-0.0-False].yaml
@@ -9,7 +9,7 @@ interactions:
       "", "city": "Irvine", "region": "CA", "country": "US", "postalCode": "92614"},
       "shipTo": {"line1": "T\u0119czowa 7", "line2": "", "city": "WROC\u0141AW", "region":
       "", "country": "PL", "postalCode": "53-601"}}, "commit": false, "currencyCode":
-      "USD", "email": ""}}'
+      "MXN", "email": ""}}'
     headers:
       Accept:
       - '*/*'
@@ -29,7 +29,7 @@ interactions:
     body:
       string: "{\"id\":0,\"code\":\"3a100b96-0554-423d-8c19-39f3e1536763\",\"companyId\"\
         :242975,\"date\":\"2019-06-26\",\"paymentDate\":\"2019-06-26\",\"status\"\
-        :\"Temporary\",\"type\":\"SalesOrder\",\"currencyCode\":\"USD\",\"customerVendorCode\"\
+        :\"Temporary\",\"type\":\"SalesOrder\",\"currencyCode\":\"MXN\",\"customerVendorCode\"\
         :\"0\",\"customerCode\":\"0\",\"reconciled\":false,\"totalAmount\":40.0,\"\
         totalExempt\":0.0,\"totalDiscount\":0.0,\"totalTax\":9.2,\"totalTaxable\"\
         :40.0,\"totalTaxCalculated\":9.2,\"adjustmentReason\":\"NotAdjusted\",\"locked\"\
