--- a/tests/extensions/plugins/cassettes/test_calculate_checkout_total[True-20.00-20.00-5.0-False].yaml
+++ b/tests/extensions/plugins/cassettes/test_calculate_checkout_total[True-20.00-20.00-5.0-False].yaml
@@ -9,7 +9,7 @@ interactions:
       "", "city": "Irvine", "region": "CA", "country": "US", "postalCode": "92614"},
       "shipTo": {"line1": "T\u0119czowa 7", "line2": "", "city": "WROC\u0141AW", "region":
       "", "country": "PL", "postalCode": "53-601"}}, "commit": false, "currencyCode":
-      "USD", "email": ""}}'
+      "MXN", "email": ""}}'
     headers:
       Accept:
       - '*/*'
@@ -29,7 +29,7 @@ interactions:
     body:
       string: "{\"id\":0,\"code\":\"c391cd80-d11b-4098-8e56-35ca056a9d99\",\"companyId\"\
         :242975,\"date\":\"2019-06-26\",\"paymentDate\":\"2019-06-26\",\"status\"\
-        :\"Temporary\",\"type\":\"SalesOrder\",\"currencyCode\":\"USD\",\"customerVendorCode\"\
+        :\"Temporary\",\"type\":\"SalesOrder\",\"currencyCode\":\"MXN\",\"customerVendorCode\"\
         :\"0\",\"customerCode\":\"0\",\"reconciled\":false,\"totalAmount\":25.0,\"\
         totalExempt\":0.0,\"totalDiscount\":0.0,\"totalTax\":5.75,\"totalTaxable\"\
         :25.0,\"totalTaxCalculated\":5.75,\"adjustmentReason\":\"NotAdjusted\",\"\
