--- a/tests/gateway/cassettes/test_authorize_error_response.yaml
+++ b/tests/gateway/cassettes/test_authorize_error_response.yaml
@@ -1,6 +1,6 @@
 interactions:
 - request:
-    body: payment_method=abcdefghijklmnoprstquwz&amount=4242&currency=usd&confirmation_method=manual&confirm=True
+    body: payment_method=abcdefghijklmnoprstquwz&amount=4242&currency=MXN&confirmation_method=manual&confirm=True
     headers:
       Accept:
       - '*/*'
@@ -69,7 +69,7 @@ interactions:
       code: 400
       message: Bad Request
 - request:
-    body: payment_method=abcdefghijklmnoprstquwz&amount=4242&currency=usd&confirmation_method=manual&confirm=True&capture_method=automatic
+    body: payment_method=abcdefghijklmnoprstquwz&amount=4242&currency=MXN&confirmation_method=manual&confirm=True&capture_method=automatic
     headers:
       Accept:
       - '*/*'
@@ -138,7 +138,7 @@ interactions:
       code: 400
       message: Bad Request
 - request:
-    body: payment_method=abcdefghijklmnoprstquwz&amount=4242&currency=usd&confirmation_method=manual&confirm=True&capture_method=automatic
+    body: payment_method=abcdefghijklmnoprstquwz&amount=4242&currency=MXN&confirmation_method=manual&confirm=True&capture_method=automatic
     headers:
       Accept:
       - '*/*'
@@ -207,7 +207,7 @@ interactions:
       code: 400
       message: Bad Request
 - request:
-    body: payment_method=abcdefghijklmnoprstquwz&amount=4242&currency=usd&confirmation_method=manual&confirm=True&capture_method=automatic
+    body: payment_method=abcdefghijklmnoprstquwz&amount=4242&currency=MXN&confirmation_method=manual&confirm=True&capture_method=automatic
     headers:
       Accept:
       - '*/*'
