--- a/tests/gateway/stripe/cassettes/test_authorize.yaml
+++ b/tests/gateway/stripe/cassettes/test_authorize.yaml
@@ -1,6 +1,6 @@
 interactions:
 - request:
-    body: payment_method=pm_card_pl&amount=4242&currency=usd&confirmation_method=manual&confirm=True&capture_method=automatic&setup_future_usage=on_session&shipping[name]=John+Doe&shipping[phone]=%2B48713988102&shipping[address][line1]=T%C4%99czowa+7&shipping[address][line2]=&shipping[address][city]=WROC%C5%81AW&shipping[address][state]=&shipping[address][postal_code]=53-601&shipping[address][country]=Poland
+    body: payment_method=pm_card_pl&amount=4242&currency=MXN&confirmation_method=manual&confirm=True&capture_method=automatic&setup_future_usage=on_session&shipping[name]=John+Doe&shipping[phone]=%2B48713988102&shipping[address][line1]=T%C4%99czowa+7&shipping[address][line2]=&shipping[address][city]=WROC%C5%81AW&shipping[address][state]=&shipping[address][postal_code]=53-601&shipping[address][country]=Poland
     headers:
       Accept:
       - '*/*'
@@ -40,7 +40,7 @@ interactions:
         \        \"postal_code\": null,\n            \"state\": null\n          },\n\
         \          \"email\": null,\n          \"name\": null,\n          \"phone\"\
         : null\n        },\n        \"captured\": true,\n        \"created\": 1565703960,\n\
-        \        \"currency\": \"usd\",\n        \"customer\": null,\n        \"description\"\
+        \        \"currency\": \"MXN\",\n        \"customer\": null,\n        \"description\"\
         : null,\n        \"destination\": null,\n        \"dispute\": null,\n    \
         \    \"failure_code\": null,\n        \"failure_message\": null,\n       \
         \ \"fraud_details\": {\n        },\n        \"invoice\": null,\n        \"\
@@ -78,7 +78,7 @@ interactions:
         url\": \"/v1/charges?payment_intent=pi_1F70K4IUmJaD6OqvfXkgsCB9\"\n  },\n\
         \  \"client_secret\": \"pi_1F70K4IUmJaD6OqvfXkgsCB9_secret_hgnbn7iX7DiQuKTT7dvFQ2YQ7\"\
         ,\n  \"confirmation_method\": \"manual\",\n  \"created\": 1565703960,\n  \"\
-        currency\": \"usd\",\n  \"customer\": null,\n  \"description\": null,\n  \"\
+        currency\": \"MXN\",\n  \"customer\": null,\n  \"description\": null,\n  \"\
         invoice\": null,\n  \"last_payment_error\": null,\n  \"livemode\": false,\n\
         \  \"metadata\": {\n  },\n  \"next_action\": null,\n  \"on_behalf_of\": null,\n\
         \  \"payment_method\": \"pm_1F70K3IUmJaD6OqvNgUunm34\",\n  \"payment_method_options\"\
