--- a/tests/gateway/stripe/cassettes/test_authorize_with_customer_id.yaml
+++ b/tests/gateway/stripe/cassettes/test_authorize_with_customer_id.yaml
@@ -1,6 +1,6 @@
 interactions:
 - request:
-    body: payment_method=pm_card_visa&amount=4242&currency=usd&confirmation_method=manual&confirm=True&capture_method=automatic&setup_future_usage=on_session
+    body: payment_method=pm_card_visa&amount=4242&currency=MXN&confirmation_method=manual&confirm=True&capture_method=automatic&setup_future_usage=on_session
     headers:
       Accept:
       - '*/*'
@@ -40,7 +40,7 @@ interactions:
         \        \"postal_code\": null,\n            \"state\": null\n          },\n\
         \          \"email\": null,\n          \"name\": null,\n          \"phone\"\
         : null\n        },\n        \"captured\": true,\n        \"created\": 1565616291,\n\
-        \        \"currency\": \"usd\",\n        \"customer\": null,\n        \"description\"\
+        \        \"currency\": \"MXN\",\n        \"customer\": null,\n        \"description\"\
         : null,\n        \"destination\": null,\n        \"dispute\": null,\n    \
         \    \"failure_code\": null,\n        \"failure_message\": null,\n       \
         \ \"fraud_details\": {\n        },\n        \"invoice\": null,\n        \"\
@@ -72,7 +72,7 @@ interactions:
         \    \"url\": \"/v1/charges?payment_intent=pi_1F6dW3IUmJaD6OqvfELxlKfH\"\n\
         \  },\n  \"client_secret\": \"pi_1F6dW3IUmJaD6OqvfELxlKfH_secret_8JVwKjwO7pbpBreupOjALTkxM\"\
         ,\n  \"confirmation_method\": \"manual\",\n  \"created\": 1565616291,\n  \"\
-        currency\": \"usd\",\n  \"customer\": null,\n  \"description\": null,\n  \"\
+        currency\": \"MXN\",\n  \"customer\": null,\n  \"description\": null,\n  \"\
         invoice\": null,\n  \"last_payment_error\": null,\n  \"livemode\": false,\n\
         \  \"metadata\": {\n  },\n  \"next_action\": null,\n  \"on_behalf_of\": null,\n\
         \  \"payment_method\": \"pm_1F6dW3IUmJaD6OqvWVN4WVwt\",\n  \"payment_method_options\"\
