--- a/tests/gateway/stripe/cassettes/test_confirm__intent.yaml
+++ b/tests/gateway/stripe/cassettes/test_confirm__intent.yaml
@@ -43,7 +43,7 @@ interactions:
         \        \"postal_code\": null,\n            \"state\": null\n          },\n\
         \          \"email\": null,\n          \"name\": null,\n          \"phone\"\
         : null\n        },\n        \"captured\": true,\n        \"created\": 1565611715,\n\
-        \        \"currency\": \"usd\",\n        \"customer\": null,\n        \"description\"\
+        \        \"currency\": \"MXN\",\n        \"customer\": null,\n        \"description\"\
         : null,\n        \"destination\": null,\n        \"dispute\": null,\n    \
         \    \"failure_code\": null,\n        \"failure_message\": null,\n       \
         \ \"fraud_details\": {\n        },\n        \"invoice\": null,\n        \"\
@@ -75,7 +75,7 @@ interactions:
         \    \"url\": \"/v1/charges?payment_intent=pi_1F6bslIUmJaD6Oqv1MNDaBSv\"\n\
         \  },\n  \"client_secret\": \"pi_1F6bslIUmJaD6Oqv1MNDaBSv_secret_vQUIoOL8zbTh0ZVXEdzKwnU7O\"\
         ,\n  \"confirmation_method\": \"automatic\",\n  \"created\": 1565610011,\n\
-        \  \"currency\": \"usd\",\n  \"customer\": null,\n  \"description\": null,\n\
+        \  \"currency\": \"MXN\",\n  \"customer\": null,\n  \"description\": null,\n\
         \  \"invoice\": null,\n  \"last_payment_error\": null,\n  \"livemode\": false,\n\
         \  \"metadata\": {\n  },\n  \"next_action\": null,\n  \"on_behalf_of\": null,\n\
         \  \"payment_method\": \"pm_1F6bslIUmJaD6OqvcjuBzexd\",\n  \"payment_method_options\"\
